--- a/totalMerger/scss/flight.scss
+++ b/totalMerger/scss/flight.scss
@@ -268,6 +268,10 @@ html{
     box-shadow: 0px 0px 5px 0px rgba(117, 117, 117, 0.87);  
   
   }
+  .button_cont{
+    margin-top: auto;
+    margin-bottom: 1em;
+  }
 
   .searchButton{
     padding: 13px 20px;
