--- a/totalMerger/scss/flight.scss
+++ b/totalMerger/scss/flight.scss
@@ -241,7 +241,7 @@ html{
   width: 100%;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-evenly;   
+  justify-content: space-between;   
   padding: 20px 0;
 
   .place{
