--- a/totalMerger/scss/popup.scss
+++ b/totalMerger/scss/popup.scss
@@ -30,7 +30,8 @@
         background-color: $orange;
         border-radius: 10px;
         font-size: 1.5em;
-        width: 50%;
+        width: 25%;
+        padding: 10px;
         cursor: pointer;
 
         &:hover{
