--- a/totalMerger/scss/package.scss
+++ b/totalMerger/scss/package.scss
@@ -17,6 +17,13 @@
     margin-bottom: 1em;
     box-shadow: 0px 0px 5px 0px rgba(194, 194, 194, 0.87);
 
+    &__container{
+        display: flex;
+        flex-flow: column wrap;
+        height: 100%;
+        justify-content: space-between;
+    }
+
     &__noItem {
         text-align: center;
     }
@@ -27,20 +34,25 @@
         width:100%;
         align-items: center;
     }
+
+    &__content:last-child{
+        justify-content: flex-end;
+    }
     &__cont{
         display:flex;
         flex-direction: column;
         margin:0.5em;
+        align-items: center;
     }
     &__info {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap: wrap;
         text-align: center;
     }
     &__category{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap: wrap;
         padding: 1em;
     }
@@ -54,15 +66,22 @@
         width: 100px;
         height: 100px;
     }
+
+    &__hotelPicture {
+        width: 256px;
+        height: 156px;
+        object-fit: cover;
+    }
     &__text {
         margin-top: 0.5em;
+        text-align: center;
     }
     &__headline {
         padding: 0.5em;
         margin-top: 0.5em;
         text-align: center;
         border-bottom: dashed;
-        border-color: $orange;
+        border-color: $darkblue;
         
     }
     &__quantity{
@@ -89,8 +108,7 @@
         padding: 0.5em;
         margin: 0.5em 0.5em 0 0 ;
         font-weight: bold;
-        background-color: lightgrey;
-        border: 2px black solid;
+        color: lightgrey;
         border-radius: 20px;
         cursor: pointer;
 
@@ -102,10 +120,11 @@
     }
     &__summary {
         display: flex;
+        flex-direction: column;
+        justify-content: start;
         width: 100%;
-        justify-content: space-evenly;
         padding: 1em 0;
-        border-top: dashed $orange;
+        border-top: dashed $darkblue;
         align-items: baseline;
     }
     &__total {
@@ -113,8 +132,11 @@
         font-size: 1.5em;
     }
     &__slide {
+        padding: 0 90px;
         width: 100%;
         text-align: right;
+        display: flex;
+        justify-content: space-between;
     }
     &__controls {
         padding: 1em;
@@ -131,15 +153,30 @@
         width: 100%;
         background-color: white;
         text-align: right;
-        padding:1em 0;        
+        padding:1em 0;   
+        display: flex; 
+        justify-content: flex-end;     
     }
     &__totalPrice {
         margin: 0.5em;
         font-size: 2em;
+        font-weight: 900;
     } 
     &__book{
         margin-top: 1em ;
         margin-right: 1em;
+    }
+
+    &__quantity{
+        margin: 0 5px;
+    }
+
+    &__perprice{
+        margin: 0 5px;
+    }
+
+    &__total{
+        margin: 5px;
     }
 }
 
