fix á birtingu og réttari upplýsingar

--- a/totalMerger/scss/package.scss
+++ b/totalMerger/scss/package.scss
@@ -110,6 +110,7 @@
         font-weight: bold;
         color: lightgrey;
         border-radius: 20px;
+        z-index: 1;
         cursor: pointer;
 
         &:hover {
