--- a/totalMerger/scss/flight.scss
+++ b/totalMerger/scss/flight.scss
@@ -76,7 +76,35 @@ html{
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
-
+@-webkit-keyframes fade-in-right {
+  0% {
+    -webkit-transform: translateX(500px);
+            transform: translateX(500px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes fade-in-right {
+  0% {
+    -webkit-transform: translateX(500px);
+            transform: translateX(500px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+@for $i from 1 through 15 {
+  .flight:nth-child(#{$i}n) {
+      animation-delay: #{$i * 0.1}s;
+  }
+}
 
 .flight {
   font-family: Arial, Helvetica, sans-serif;
@@ -89,14 +117,13 @@ html{
   border: 1px solid lightgrey;
   border-radius: 2.5px;
   margin-bottom: 1em;
-  box-shadow: 0px 0px 5px 0px rgba(194,194,194,0.87);  @media (max-width: 799px) {
-
-  }
+  box-shadow: 0px 0px 5px 0px rgba(194,194,194,0.87);     
+  -webkit-animation: fade-in-right 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation: fade-in-right 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;     
   // &:hover {
   //   border-width: 5px;
   //   background-color: lightgoldenrodyellow;
   // }
-
 
   &__info {
   width: 100%;
@@ -146,7 +173,7 @@ html{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center ;;
+    align-items: center ;
   }
 
   &__planDest{
@@ -235,7 +262,6 @@ html{
     }
   }
 }
-
 
 .index__search{
   width: 100%;
