--- a/totalMerger/scss/trip.scss
+++ b/totalMerger/scss/trip.scss
@@ -1,3 +1,34 @@
+@-webkit-keyframes fade-in-right {
+    0% {
+      -webkit-transform: translateX(500px);
+              transform: translateX(500px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  @keyframes fade-in-right {
+    0% {
+      -webkit-transform: translateX(500px);
+              transform: translateX(500px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  @for $i from 1 through 15 {
+    .trip:nth-child(#{$i}n) {
+        animation-delay: #{$i * 0.1}s;
+    }
+  }
+  
+
 .trip{
     width: 100%;
     display: flex;
@@ -9,6 +40,8 @@
     border-radius: 2.5px;
     margin-bottom: 1em;
     box-shadow: 0px 0px 5px 0px rgba(194, 194, 194, 0.87);
+    -webkit-animation: fade-in-right 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: fade-in-right 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;     
 
 
     &__info{
